--- a/WiLLiAN-projects/ManagementApplication/src/main/resources/application.yaml
+++ b/WiLLiAN-projects/ManagementApplication/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: RestfulQuickstart
+    name: ManagementApplication
   datasource:
     url: jdbc:mysql://localhost:3306/rcs_db
     driver-class-name: com.mysql.cj.jdbc.Driver
