--- a/WiLLiAN-projects/ManagementApplication/src/main/resources/application.yaml
+++ b/WiLLiAN-projects/ManagementApplication/src/main/resources/application.yaml
@@ -6,6 +6,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
+  jackson:
+    date-format: yyyy-MM-dd
 
 mybatis:
   configuration:
