--- a/WiLLiAN-projects/RestfulQuickstart/pom.xml
+++ b/WiLLiAN-projects/RestfulQuickstart/pom.xml
@@ -50,6 +50,11 @@
       <artifactId>logback-classic</artifactId>
       <version>1.4.14</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper-spring-boot-starter</artifactId>
+      <version>1.4.7</version>
+    </dependency>
 
 		<dependency>
 			<groupId>com.mysql</groupId>
