--- a/WiLLiAN-projects/RestfulQuickstart/src/main/resources/application.yml
+++ b/WiLLiAN-projects/RestfulQuickstart/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: RestfulQuickstart
   datasource:
-    url: jdbc:mysql://localhost:3306/db01
+    url: jdbc:mysql://localhost:3306/rcs_db
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
